{{$NEXT}}

0.7.8  2023-11-13T06:38:11+13:00
   - Further streamline CMAP encoding. Remove redundant code-point checks.
   - Minor ligature and glyph lookup fixes

0.7.7  2023-10-15T07:18:39+13:00
   - Fix CMap encoder to handle string decoding of non
     Unicode-standard ligatures #35
   - Improved compaction of ToUnicode CMaps 

0.7.6  2023-09-29T17:14:01+13:00
   - Fix a bug in parsing ToUnicode CMAPs #34

0.7.5  2023-09-01T08:55:54+12:00
   - Attempted zef upload

0.7.4  2023-08-26T07:30:02+12:00
   - Rename find-font :limit option to :best
   - make $cid-font.make-encoding-stream a private method

0.7.3  2023-08-22T15:14:44+12:00
   - Fix handling of OpenType/CFF embedded font files. Distinguish
     from simple CFF fonts.

0.7.2  2023-08-22T10:08:51+12:00
   - Fix attempted loading of *.ttc (true-type collection) fonts and
     mandatory subsetting via HarfBuzz::Subset

0.7.1  2023-08-03T09:18:47+12:00
   - Deprecate :seq in favour of :all and :limit options

0.7.0  2023-07-24T04:45:02+12:00
   - Prefer to use new FontConfig::Pattern class for font loading
   - Add :seq option to find-font(). Returns a sequence of font files,
     best match first.

0.6.14  2023-07-07T07:22:32+12:00
   - Use low level Font::FreeType .box() method for compatibility with v0.50+

0.6.13  2023-06-30T08:27:56+12:00
   - Check :$dict really is a core-font dictionary when used with :core-font

0.6.12  2023-06-30T07:47:19+12:00
   - Limit use of :core-font when combined with :dict. This only works with
     simple cases.

0.6.11  2023-06-29T09:16:58+12:00
    - Add :core-font option. This loads objects of type
      PDF::Content::Font::CoreFont rather than PDF::Font::Loader::FontObj

0.6.10  2023-04-15T09:36:17+12:00
    - Make FontConfig an optional dependency. Mostly to make this module
      installable under Windows.

0.6.9  2022-11-11T07:06:39+13:00
    - Further minor fixes to CID font handling

0.6.8  2022-10-31T13:54:05+13:00