@@ -6,11 +6,11 @@
   "build-depends": [
   ],
   "depends": [
-    "Font::AFM:ver<1.24.6+>",
+    "Font::AFM:ver<1.24.9+>",
     "Font::FreeType:ver<0.4.3+>",
     "Hash::int",
     "Native::Packing",
-    "PDF::Content:ver<0.7.1+>",
+    "PDF::Content:ver<0.7.3+>",
     "PDF::Lite:ver<0.0.11+>",
     "PDF:ver<0.5.4+>"
   ],
