@@ -1,0 +1,258 @@
+StartFontMetrics 2.0
+Comment Copyright  (C) Copyright 1988, 1990 The Monotype Corporation Plc. All Rights Reserved. 
+Comment UniqueID 31596
+Comment Panose 2 0 5 3 7 0 0 2 0 3
+FullName Times New Roman PS
+FontName TimesNewRomanPS
+FamilyName Times New Roman PS
+Weight Roman
+Notice Copyright (c) 1988, 1990 Adobe Systems Incorporated.  All Rights Reserved.Times New Roman is a trademark of the Monotype Corporation Plc registered in the US Patent and TM Office and elsewhere.
+Version 001.001
+IsFixedPitch false
+ItalicAngle 0.00
+FontBBox -167 -216 1009 878
+Ascender 694
+Descender -213
+XHeight 447
+CapHeight 662
+UnderlinePosition -100
+UnderlineThickness 50
+StdHW 36
+StdVW 87
+EncodingScheme FontSpecific
+StartCharMetrics 228
+C 1 ; WX 722 ; N Eth ; B 18 0 685 662 ;
+C 2 ; WX 500 ; N eth ; B 34 -14 466 694 ;
+C 3 ; WX 611 ; N Lslash ; B 12 0 588 662 ;
+C 4 ; WX 278 ; N lslash ; B 16 0 271 694 ;
+C 5 ; WX 556 ; N Scaron ; B 65 -15 504 875 ;
+C 6 ; WX 389 ; N scaron ; B 51 -14 356 677 ;
+C 7 ; WX 722 ; N Yacute ; B 13 0 711 878 ;
+C 8 ; WX 500 ; N yacute ; B 6 -216 494 682 ;
+C 11 ; WX 556 ; N Thorn ; B 19 0 519 662 ;
+C 12 ; WX 500 ; N thorn ; B -4 -213 464 694 ;
+C 14 ; WX 611 ; N Zcaron ; B 11 0 581 875 ;
+C 15 ; WX 444 ; N zcaron ; B 18 0 426 677 ;
+C 21 ; WX 750 ; N onehalf ; B 65 -26 730 676 ;
+C 22 ; WX 750 ; N onequarter ; B 65 -26 737 676 ;
+C 23 ; WX 300 ; N onesuperior ; B 65 324 234 676 ;
+C 24 ; WX 750 ; N threequarters ; B 20 -26 737 676 ;
+C 25 ; WX 300 ; N threesuperior ; B 20 317 254 676 ;
+C 26 ; WX 300 ; N twosuperior ; B 9 324 279 676 ;
+C 27 ; WX 200 ; N brokenbar ; B 80 -216 120 694 ;
+C 28 ; WX 564 ; N minus ; B 20 312 545 352 ;
+C 29 ; WX 564 ; N multiply ; B 81 131 483 533 ;
+C 32 ; WX 250 ; N space ; B 0 0 0 0 ;
+C 33 ; WX 333 ; N exclam ; B 110 -14 222 677 ;
+C 34 ; WX 408 ; N quotedbl ; B 66 392 343 677 ;
+C 35 ; WX 500 ; N numbersign ; B 18 -15 482 677 ;
+C 36 ; WX 500 ; N dollar ; B 52 -76 448 718 ;
+C 37 ; WX 833 ; N percent ; B 34 -15 799 677 ;
+C 38 ; WX 778 ; N ampersand ; B 35 -15 746 677 ;
+C 39 ; WX 180 ; N quotesingle ; B 41 392 139 677 ;
+C 40 ; WX 333 ; N parenleft ; B 41 -216 311 694 ;
+C 41 ; WX 333 ; N parenright ; B 22 -216 292 694 ;
+C 42 ; WX 500 ; N asterisk ; B 71 290 429 694 ;
+C 43 ; WX 564 ; N plus ; B 20 69 545 595 ;
+C 44 ; WX 250 ; N comma ; B 54 -166 199 98 ;
+C 45 ; WX 333 ; N hyphen ; B 40 186 293 263 ;
+C 46 ; WX 250 ; N period ; B 71 -14 179 94 ;
+C 47 ; WX 278 ; N slash ; B 0 -14 278 694 ;
+C 48 ; WX 500 ; N zero ; B 36 -14 464 676 ;
+C 49 ; WX 500 ; N one ; B 117 0 378 676 ;
+C 50 ; WX 500 ; N two ; B 21 0 458 676 ;
+C 51 ; WX 500 ; N three ; B 40 -14 417 676 ;
+C 52 ; WX 500 ; N four ; B 15 0 465 676 ;
+C 53 ; WX 500 ; N five ; B 48 -14 434 662 ;
+C 54 ; WX 500 ; N six ; B 43 -14 461 676 ;
+C 55 ; WX 500 ; N seven ; B 37 -14 455 662 ;
+C 56 ; WX 500 ; N eight ; B 60 -14 442 676 ;
+C 57 ; WX 500 ; N nine ; B 39 -14 457 676 ;
+C 58 ; WX 278 ; N colon ; B 85 -14 193 461 ;
+C 59 ; WX 278 ; N semicolon ; B 68 -166 213 461 ;
+C 60 ; WX 564 ; N less ; B 20 91 545 573 ;
+C 61 ; WX 564 ; N equal ; B 20 233 545 431 ;
+C 62 ; WX 564 ; N greater ; B 20 91 545 573 ;
+C 63 ; WX 444 ; N question ; B 43 -14 402 677 ;
+C 64 ; WX 921 ; N at ; B 49 -216 898 694 ;
+C 65 ; WX 722 ; N A ; B 10 0 712 677 ;
+C 66 ; WX 667 ; N B ; B 19 0 613 662 ;
+C 67 ; WX 667 ; N C ; B 37 -15 632 677 ;
+C 68 ; WX 722 ; N D ; B 19 0 685 662 ;
+C 69 ; WX 611 ; N E ; B 19 0 588 662 ;
+C 70 ; WX 556 ; N F ; B 19 0 517 662 ;
+C 71 ; WX 722 ; N G ; B 37 -15 709 677 ;
+C 72 ; WX 722 ; N H ; B 19 0 703 662 ;
+C 73 ; WX 333 ; N I ; B 25 0 307 662 ;
+C 74 ; WX 389 ; N J ; B 22 -15 384 662 ;
+C 75 ; WX 722 ; N K ; B 19 0 733 662 ;
+C 76 ; WX 611 ; N L ; B 19 0 588 662 ;
+C 77 ; WX 889 ; N M ; B 18 0 870 662 ;
+C 78 ; WX 722 ; N N ; B -12 -11 710 662 ;
+C 79 ; WX 722 ; N O ; B 37 -15 685 677 ;
+C 80 ; WX 556 ; N P ; B 19 0 524 662 ;
+C 81 ; WX 722 ; N Q ; B 37 -198 685 677 ;
+C 82 ; WX 667 ; N R ; B 19 0 677 662 ;
+C 83 ; WX 556 ; N S ; B 65 -15 504 677 ;
+C 84 ; WX 611 ; N T ; B 28 0 582 662 ;
+C 85 ; WX 722 ; N U ; B 9 -15 712 662 ;
+C 86 ; WX 722 ; N V ; B 10 -15 711 662 ;
+C 87 ; WX 944 ; N W ; B 12 -15 934 662 ;
+C 88 ; WX 722 ; N X ; B 9 0 712 662 ;
+C 89 ; WX 722 ; N Y ; B 13 0 711 662 ;
+C 90 ; WX 611 ; N Z ; B 11 0 581 662 ;
+C 91 ; WX 333 ; N bracketleft ; B 82 -198 297 677 ;
+C 92 ; WX 278 ; N backslash ; B 0 -14 278 694 ;
+C 93 ; WX 333 ; N bracketright ; B 36 -198 251 677 ;
+C 94 ; WX 469 ; N asciicircum ; B 18 324 451 676 ;
+C 95 ; WX 500 ; N underscore ; B -8 -125 508 -75 ;
+C 96 ; WX 333 ; N grave ; B 58 546 218 715 ;
+C 97 ; WX 444 ; N a ; B 34 -14 440 461 ;
+C 98 ; WX 500 ; N b ; B -3 -14 466 694 ;
+C 99 ; WX 444 ; N c ; B 34 -14 411 461 ;
+C 100 ; WX 500 ; N d ; B 34 -14 505 694 ;
+C 101 ; WX 444 ; N e ; B 34 -14 412 461 ;
+C 102 ; WX 333 ; N f ; B 38 0 434 694 ; L i fi ; L l fl ;
+C 103 ; WX 500 ; N g ; B 28 -216 482 461 ;
+C 104 ; WX 500 ; N h ; B 5 0 496 694 ;
+C 105 ; WX 278 ; N i ; B 27 0 253 694 ;
+C 106 ; WX 278 ; N j ; B -79 -216 192 694 ;
+C 107 ; WX 500 ; N k ; B 5 0 506 694 ;
+C 108 ; WX 278 ; N l ; B 27 0 253 694 ;
+C 109 ; WX 778 ; N m ; B 5 0 773 461 ;
+C 110 ; WX 500 ; N n ; B 5 0 496 461 ;
+C 111 ; WX 500 ; N o ; B 34 -14 466 461 ;
+C 112 ; WX 500 ; N p ; B -4 -213 464 461 ;
+C 113 ; WX 500 ; N q ; B 34 -213 506 461 ;
+C 114 ; WX 333 ; N r ; B 5 0 340 461 ;
+C 115 ; WX 389 ; N s ; B 51 -14 356 461 ;
+C 116 ; WX 278 ; N t ; B 8 -6 278 594 ;
+C 117 ; WX 500 ; N u ; B 3 -14 500 447 ;
+C 118 ; WX 500 ; N v ; B 9 -14 491 447 ;
+C 119 ; WX 722 ; N w ; B 8 -14 714 447 ;
+C 120 ; WX 500 ; N x ; B 13 0 488 447 ;
+C 121 ; WX 500 ; N y ; B 6 -216 494 447 ;
+C 122 ; WX 444 ; N z ; B 18 0 426 447 ;
+C 123 ; WX 480 ; N braceleft ; B 104 -216 376 694 ;
+C 124 ; WX 200 ; N bar ; B 80 -216 120 694 ;
+C 125 ; WX 480 ; N braceright ; B 104 -216 376 694 ;
+C 126 ; WX 541 ; N asciitilde ; B 23 253 519 411 ;
+C 128 ; WX 722 ; N Adieresis ; B 10 0 712 833 ;
+C 129 ; WX 722 ; N Aring ; B 10 0 712 831 ;
+C 130 ; WX 667 ; N Ccedilla ; B 37 -174 632 677 ;
+C 131 ; WX 611 ; N Eacute ; B 19 0 588 878 ;
+C 132 ; WX 722 ; N Ntilde ; B -12 -11 710 842 ;
+C 133 ; WX 722 ; N Odieresis ; B 37 -15 685 833 ;
+C 134 ; WX 722 ; N Udieresis ; B 9 -15 712 833 ;
+C 135 ; WX 444 ; N aacute ; B 34 -14 440 682 ;
+C 136 ; WX 444 ; N agrave ; B 34 -14 440 682 ;
+C 137 ; WX 444 ; N acircumflex ; B 34 -14 440 677 ;
+C 138 ; WX 444 ; N adieresis ; B 34 -14 440 655 ;
+C 139 ; WX 444 ; N atilde ; B 34 -14 440 663 ;
+C 140 ; WX 444 ; N aring ; B 34 -14 440 693 ;
+C 141 ; WX 444 ; N ccedilla ; B 34 -174 411 461 ;
+C 142 ; WX 444 ; N eacute ; B 34 -14 412 682 ;
+C 143 ; WX 444 ; N egrave ; B 34 -14 412 682 ;
+C 144 ; WX 444 ; N ecircumflex ; B 34 -14 412 677 ;
+C 145 ; WX 444 ; N edieresis ; B 34 -14 412 655 ;
+C 146 ; WX 278 ; N iacute ; B 27 0 253 682 ;
+C 147 ; WX 278 ; N igrave ; B 27 0 253 682 ;
+C 148 ; WX 278 ; N icircumflex ; B 1 0 277 677 ;
+C 149 ; WX 278 ; N idieresis ; B 0 0 279 655 ;
+C 150 ; WX 500 ; N ntilde ; B 5 0 496 663 ;
+C 151 ; WX 500 ; N oacute ; B 34 -14 466 682 ;
+C 152 ; WX 500 ; N ograve ; B 34 -14 466 682 ;
+C 153 ; WX 500 ; N ocircumflex ; B 34 -14 466 677 ;
+C 154 ; WX 500 ; N odieresis ; B 34 -14 466 655 ;
+C 155 ; WX 500 ; N otilde ; B 34 -14 466 663 ;
+C 156 ; WX 500 ; N uacute ; B 3 -14 500 682 ;
+C 157 ; WX 500 ; N ugrave ; B 3 -14 500 682 ;
+C 158 ; WX 500 ; N ucircumflex ; B 3 -14 500 677 ;
+C 159 ; WX 500 ; N udieresis ; B 3 -14 500 655 ;
+C 160 ; WX 500 ; N dagger ; B 49 -197 451 694 ;
+C 161 ; WX 400 ; N degree ; B 48 377 351 676 ;
+C 162 ; WX 500 ; N cent ; B 63 -185 440 647 ;
+C 163 ; WX 500 ; N sterling ; B 28 -14 477 677 ;
+C 164 ; WX 500 ; N section ; B 76 -194 424 677 ;
+C 165 ; WX 350 ; N bullet ; B 52 208 298 454 ;
+C 166 ; WX 453 ; N paragraph ; B -4 -216 457 662 ;
+C 167 ; WX 500 ; N germandbls ; B 12 -6 466 694 ;
+C 168 ; WX 760 ; N registered ; B 34 -15 726 677 ;
+C 169 ; WX 760 ; N copyright ; B 34 -15 726 677 ;
+C 170 ; WX 980 ; N trademark ; B 13 268 966 662 ;
+C 171 ; WX 333 ; N acute ; B 115 546 275 715 ;
+C 172 ; WX 333 ; N dieresis ; B 27 547 306 655 ;
+C 174 ; WX 889 ; N AE ; B -10 0 866 662 ;
+C 175 ; WX 722 ; N Oslash ; B 37 -23 685 683 ;
+C 177 ; WX 564 ; N plusminus ; B 20 69 545 595 ;
+C 180 ; WX 500 ; N yen ; B 1 0 499 662 ;
+C 181 ; WX 500 ; N mu ; B 28 -216 497 447 ;
+C 187 ; WX 276 ; N ordfeminine ; B 1 384 278 676 ;
+C 188 ; WX 310 ; N ordmasculine ; B 13 384 297 676 ;
+C 190 ; WX 667 ; N ae ; B 34 -14 636 461 ;
+C 191 ; WX 500 ; N oslash ; B 19 -32 481 479 ;
+C 192 ; WX 444 ; N questiondown ; B 42 -216 401 475 ;
+C 193 ; WX 333 ; N exclamdown ; B 111 -216 223 475 ;
+C 194 ; WX 564 ; N logicalnot ; B 20 233 545 431 ;
+C 196 ; WX 500 ; N florin ; B 0 -216 499 694 ;
+C 199 ; WX 500 ; N guillemotleft ; B 31 -4 469 456 ;
+C 200 ; WX 500 ; N guillemotright ; B 31 -4 469 456 ;
+C 201 ; WX 1000 ; N ellipsis ; B 112 -14 888 94 ;
+C 203 ; WX 722 ; N Agrave ; B 10 0 712 878 ;
+C 204 ; WX 722 ; N Atilde ; B 10 0 712 842 ;
+C 205 ; WX 722 ; N Otilde ; B 37 -15 685 842 ;
+C 206 ; WX 889 ; N OE ; B 37 -7 866 669 ;
+C 207 ; WX 722 ; N oe ; B 34 -14 691 461 ;
+C 208 ; WX 500 ; N endash ; B -9 221 509 257 ;
+C 209 ; WX 1000 ; N emdash ; B -9 221 1009 257 ;
+C 210 ; WX 444 ; N quotedblleft ; B 31 424 413 677 ;
+C 211 ; WX 444 ; N quotedblright ; B 31 424 413 677 ;
+C 212 ; WX 333 ; N quoteleft ; B 92 424 241 677 ;
+C 213 ; WX 333 ; N quoteright ; B 92 424 241 677 ;
+C 214 ; WX 564 ; N divide ; B 20 139 545 525 ;
+C 216 ; WX 500 ; N ydieresis ; B 6 -216 494 655 ;
+C 217 ; WX 722 ; N Ydieresis ; B 13 0 711 833 ;
+C 218 ; WX 167 ; N fraction ; B -167 -26 333 676 ;
+C 220 ; WX 333 ; N guilsinglleft ; B 57 -4 276 456 ;
+C 221 ; WX 333 ; N guilsinglright ; B 57 -4 276 456 ;
+C 222 ; WX 556 ; N fi ; B 26 0 543 694 ;
+C 223 ; WX 556 ; N fl ; B 26 0 543 694 ;
+C 224 ; WX 500 ; N daggerdbl ; B 68 -216 432 694 ;
+C 225 ; WX 250 ; N periodcentered ; B 71 277 179 385 ;
+C 226 ; WX 333 ; N quotesinglbase ; B 92 -155 241 98 ;
+C 227 ; WX 444 ; N quotedblbase ; B 31 -155 413 98 ;
+C 228 ; WX 1000 ; N perthousand ; B 31 -15 969 677 ;
+C 229 ; WX 722 ; N Acircumflex ; B 10 0 712 865 ;
+C 230 ; WX 611 ; N Ecircumflex ; B 19 0 588 865 ;
+C 231 ; WX 722 ; N Aacute ; B 10 0 712 878 ;
+C 232 ; WX 611 ; N Edieresis ; B 19 0 588 833 ;
+C 233 ; WX 611 ; N Egrave ; B 19 0 588 878 ;
+C 234 ; WX 333 ; N Iacute ; B 25 0 307 878 ;
+C 235 ; WX 333 ; N Icircumflex ; B 25 0 307 865 ;
+C 236 ; WX 333 ; N Idieresis ; B 25 0 307 833 ;
+C 237 ; WX 333 ; N Igrave ; B 25 0 307 878 ;
+C 238 ; WX 722 ; N Oacute ; B 37 -15 685 878 ;
+C 239 ; WX 722 ; N Ocircumflex ; B 37 -15 685 865 ;
+C 241 ; WX 722 ; N Ograve ; B 37 -15 685 878 ;
+C 242 ; WX 722 ; N Uacute ; B 9 -15 712 878 ;
+C 243 ; WX 722 ; N Ucircumflex ; B 9 -15 712 865 ;
+C 244 ; WX 722 ; N Ugrave ; B 9 -15 712 878 ;
+C 245 ; WX 278 ; N dotlessi ; B 27 0 253 461 ;
+C 246 ; WX 333 ; N circumflex ; B 28 551 304 712 ;
+C 247 ; WX 333 ; N tilde ; B 10 538 324 666 ;
+C 248 ; WX 333 ; N macron ; B 11 569 322 632 ;
+C 249 ; WX 333 ; N breve ; B 26 533 306 670 ;
+C 250 ; WX 333 ; N dotaccent ; B 113 547 221 655 ;
+C 251 ; WX 333 ; N ring ; B 73 505 261 693 ;
+C 252 ; WX 333 ; N cedilla ; B 76 -174 258 -12 ;
+C 253 ; WX 333 ; N hungarumlaut ; B 46 546 323 715 ;
+C 254 ; WX 333 ; N ogonek ; B 72 -177 297 8 ;
+C 255 ; WX 333 ; N caron ; B 28 551 304 712 ;
+C -1 ; WX 500 ; N currency ; B 13 94 487 568 ;
+EndCharMetrics
+StartKernData
+StartKernPairs 1
+KPX A V -128
+EndKernPairs
+EndKernData
+EndFontMetrics
